<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.aelsayed.takeaway.presentation.activities.DetailsActivity">


    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_favorite"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/favorite_button_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_minimumOrder"
            tools:srcCompat="@drawable/vec_favorite_unselected"
            android:contentDescription="@string/fav_image" />


        <TextView
            android:id="@+id/tv_restaurantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="item text" />

        <TextView
            android:id="@+id/tv_minimumOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tv_restaurantName"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurantName"
            tools:text="minimum order" />

        <TextView
            android:id="@+id/tv_openingState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_restaurantName"
            app:layout_constraintTop_toBottomOf="@id/tv_minimumOrder"
            tools:text="open" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/best_match" />

            <TextView
                android:id="@+id/bestMatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest" />

            <TextView
                android:id="@+id/newest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratingaverage" />

            <TextView
                android:id="@+id/ratingAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popularity" />

            <TextView
                android:id="@+id/popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/averageproductprice" />

            <TextView
                android:id="@+id/averageProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deliverycosts" />

            <TextView
                android:id="@+id/deliveryCosts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero" />
        </LinearLayout>


    </LinearLayout>


</androidx.core.widget.NestedScrollView>